# BulkAudioExtractTool

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .rich-codex.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  screenshots.yml
scripts/: new_bundle.sh
src/BAET/: _constants.py  app_args.py  extract.py  jobs.py
tests/: __init__.py  test_progress_style.py
tests/FFmpeg/: __init__.py
tests/cli/: __init__.py  types_test.py
